refactor: movie info, card

--- a/src/UI/CustomTitle/CustomTitle.module.sass
+++ b/src/UI/CustomTitle/CustomTitle.module.sass
@@ -15,7 +15,7 @@
     &::after
       content: "\e046"
       display: inline-block
-      font-family: iconfont
+      font-family: var(--iconfont)
       font-weight: 400
       font-style: normal
       font-size: 16px
@@ -54,7 +54,6 @@
       display: flex
       justify-content: space-between
       align-items: center
-      width: 100%
 
     &_default
       font-size: 20px
