--- a/src/UI/SliderButtons/SliderButtons.module.sass
+++ b/src/UI/SliderButtons/SliderButtons.module.sass
@@ -23,7 +23,7 @@
         opacity: 0.72
         transition: .2s
         &::after
-            font-family: ivi-icons
+            font-family: var(--ivi-icons)
             font-style: normal
             font-size: 30px
             color: vars.$whiteTextColor
