--- a/src/UI/Votes/Votes.module.sass
+++ b/src/UI/Votes/Votes.module.sass
@@ -1,5 +1,5 @@
 @mixin iconFont
-  font-family: iconfont, sans-serif
+  font-family: iconfont
   color: rgba(126, 121, 143, .72)
   font-size: 16px
   line-height: 16px
