--- a/src/components/Home/TopTen/TopTen.module.sass
+++ b/src/components/Home/TopTen/TopTen.module.sass
@@ -13,8 +13,10 @@
     &__img
         margin-right: 8px
 
-.slider
+.slide
     overflow: visible
+    width: 10%
+    margin-right: 24px
 
 .swiper
     padding: 20px
