--- a/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
+++ b/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
@@ -17,10 +17,8 @@
     padding-bottom: 35px
     display: flex
     justify-content: center
-    aspect-ratio: 304/620
     &__wrapper
         position: relative
-        aspect-ratio: 304/620
         width: 100%
         &::before
             content: ''
@@ -37,6 +35,8 @@
         width: 100%
         height: auto
         border-radius: 8px
+        aspect-ratio: 304/620
+        max-width: 304px
 
     &__logo
         position: absolute
