--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -82,6 +82,9 @@ a
         bottom: -5px
         border-width: 7px 7px 0
 
+\:root
+  --toastify-color-dark: #1f1b2e
+  --toastify-color-progress-dark: #ea003d
 @media (max-width: 880px)
   .container
     padding: 0 24px
