--- a/src/components/Catalog/MoviesList/MoviesList.module.sass
+++ b/src/components/Catalog/MoviesList/MoviesList.module.sass
@@ -11,6 +11,11 @@
     pointer-events: none
     opacity: .2
 
+  &__loader
+    display: flex
+    justify-content: center
+    margin-block: 15px
+
   &__text
     display: flex
     justify-content: center
