--- a/src/components/Movie/MovieInfo/MovieInfoComponents/MovieTrailer/MovieTrailer.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoComponents/MovieTrailer/MovieTrailer.module.sass
@@ -2,14 +2,6 @@
 
 .trailer
   position: relative
-  &::before
-    content: ''
-    display: block
-    position: absolute
-    width: 100%
-    height: 100%
-    background-color: rgba(7,5,14,.4)
-    z-index: 2
   &__img
     display: block
     height: auto
@@ -25,8 +17,12 @@
     display: flex
     align-items: center
     justify-content: center
+    background-color: rgba(7,5,14,.4)
     top: 0
     left: 0
+    &:hover
+      .pause
+        opacity: 1
 
   &__player
     position: absolute
@@ -80,26 +76,19 @@
     color: vars.$whiteTextColor
     margin-left: 4px
 
-.button
-  opacity: 0.8
-  height: auto
-  padding: 5px 15px
-  width: 320px
-
-  &:hover
-    opacity: 1
-
-  &__title
-    font-size: 15px
-    line-height: 20px
-    font-weight: 500
+.pause
+  background-color: vars.$accent
+  width: 88px
+  height: 88px
+  display: flex
+  align-items: center
+  justify-content: center
+  border-radius: 100%
+  cursor: pointer
+  opacity: 0
+  transition: .3s
+  &__icon
     color: vars.$whiteTextColor
-
-  &__subtitle
-    font-size: 13px
-    line-height: 16px
-    font-weight: 500
-    color: #ffffffb8
 
 @media (max-width: 1160px)
   .trailer
@@ -108,7 +97,3 @@
 @media (max-width: 880px)
   .trailer
     margin: 0 -24px
-
-@media (max-width: 600px)
-  .button
-    width: 272px
