feat: font decorator

--- a/src/UI/MovieCard/MovieCard.module.sass
+++ b/src/UI/MovieCard/MovieCard.module.sass
@@ -93,11 +93,12 @@
 .age
     width: 24px
     height: 16px
-    background-image: url(/images/age16.svg)
     position: absolute
     right: 4px
     bottom: 4px
     z-index: 1
+    &__img
+        object-fit: cover
 
 .grade
     margin-right: 8px
