feat: next/localfonts

--- a/src/components/Layout/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
+++ b/src/components/Layout/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
@@ -62,7 +62,7 @@
         font-weight: 500
 
       .icon
-        font-family: iconfont, sans-serif
+        font-family: var(--iconfont)
         color: vars.$whiteTextColor
         font-size: 20px
         opacity: .48
