--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -11,8 +11,8 @@
 		font-weight: $fweight
 		src: url($furl) format('woff2')
 
-@include font('iviSans', normal, 400, '../assets/fonts/iviSans-Regular.woff2')
-@include font('iviSans', normal, 500, '../assets/fonts/iviSans-Medium.woff2')
-@include font('iviSans', normal, 700, '../assets/fonts/iviSans-Bold.woff2')
-@include font('ivi-icons', normal, 400, '../assets/fonts/ivi-icons.woff')
-@include font('iconfont', normal, 400, '../assets/fonts/iconfont.woff')
+// @include font('iviSans', normal, 400, '../assets/fonts/iviSans-Regular.woff2')
+// @include font('iviSans', normal, 500, '../assets/fonts/iviSans-Medium.woff2')
+// @include font('iviSans', normal, 700, '../assets/fonts/iviSans-Bold.woff2')
+// @include font('ivi-icons', normal, 400, '../assets/fonts/ivi-icons.woff')
+// @include font('iconfont', normal, 400, '../assets/fonts/iconfont.woff')
