fix: update fonts

--- a/src/components/Person/BackButton/BackButton.module.sass
+++ b/src/components/Person/BackButton/BackButton.module.sass
@@ -19,7 +19,7 @@
     left: -24px
     content: "\E040"
     font-size: 20px
-    font-family: iconfont, sans-serif
+    font-family: var(--iconfont)
     transition: .1s
 
   &:hover
