--- a/src/components/Catalog/Filters/FilterTitle/FilterTitle.module.sass
+++ b/src/components/Catalog/Filters/FilterTitle/FilterTitle.module.sass
@@ -32,7 +32,7 @@
     background-color: #7e798f
 
   &__arrow
-    font-family: iconfont
+    font-family: var(--iconfont)
     font-size: 6px
     line-height: 6px
 
