feat: creators title

--- a/src/components/Movie/CreatorsList/CreatorsList.module.sass
+++ b/src/components/Movie/CreatorsList/CreatorsList.module.sass
@@ -32,6 +32,9 @@
     background-color: #272038
     color: #d9d4ee
 
+.title
+  margin-bottom: 24px
+
 @media (max-width: 1260px)
   .creator:nth-child(n+10)
     display: none
