feat: person images placeholder

--- a/src/components/Movie/MovieInfo/MovieInfoComponents/MovieTrailer/MovieTrailer.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoComponents/MovieTrailer/MovieTrailer.module.sass
@@ -54,13 +54,14 @@
     margin-top: 8px
     text-align: center
 
-  &__age
-    width: 24px
-    height: 16px
-    background-image: url('/images/age16.svg')
-    position: absolute
-    bottom: 16px
-    left: 16px
+.age
+  width: 24px
+  height: 16px
+  position: absolute
+  bottom: 16px
+  left: 16px
+  &__img
+    object-fit: cover
 
 .play
   background-color: vars.$accent
