--- a/src/components/Catalog/Sorting/SortingTitle/SortingTitle.module.sass
+++ b/src/components/Catalog/Sorting/SortingTitle/SortingTitle.module.sass
@@ -20,7 +20,7 @@
     height: 20px
 
   &__arrow
-    font-family: iconfont
+    font-family: var(--iconfont)
     font-size: 6px
     line-height: 6px
 
