feat: add auth tests, remove google, vk auth

--- a/src/UI/ModalInput/ModalInput.module.sass
+++ b/src/UI/ModalInput/ModalInput.module.sass
@@ -73,7 +73,7 @@
     left: 29px
 
   &__icon
-    font-family: iconfont, sans-serif
+    font-family: var(--iconfont), sans-serif
     font-size: 16px
 
     &:before
@@ -108,7 +108,7 @@
 
   &:before
     content: "\E357"
-    font-family: iconfont, sans-serif
+    font-family: var(--iconfont), sans-serif
     font-size: 16px
     line-height: 16px
     color: #1f1b2e
