feat: add filters stories

--- a/src/components/Catalog/Filters/MultiSelector/ListItem/ListItem.module.sass
+++ b/src/components/Catalog/Filters/MultiSelector/ListItem/ListItem.module.sass
@@ -18,7 +18,7 @@
     opacity: 1
 
   &__checkbox
-    font-family: iconfont
+    font-family: var(--iconfont)
     width: 16px
     height: 16px
     font-size: 16px
