--- a/src/components/Catalog/Filters/MultiSelector/MultiSelector.module.sass
+++ b/src/components/Catalog/Filters/MultiSelector/MultiSelector.module.sass
@@ -13,13 +13,14 @@
     box-shadow: 0 20px 40px rgba(7,5,14,.4)
     z-index: 1
     padding: 20px
-    max-width: 180%
+    width: 650px
     transition: .2s
     pointer-events: none
     transform-origin: top
 
     &_center
-      left: -40%
+      left: 50%
+      margin-left: -325px
 
     &_left
       left: 0
@@ -61,5 +62,6 @@
     position: unset
 
     &__dropdown
-      max-width: calc(100% - 40px)
+      width: calc(100% - 40px)
       left: 20px
+      margin-inline: 0
