--- a/src/components/Layout/Footer/FooterCert/FooterCert.module.sass
+++ b/src/components/Layout/Footer/FooterCert/FooterCert.module.sass
@@ -1,5 +1,6 @@
 .cert
   background-clip: text
+  -webkit-background-clip: text
   background-image: linear-gradient(-45deg,#c447ff,#ea003d)
   -webkit-text-fill-color: transparent
   margin-top: 8px
