--- a/src/components/Catalog/Filters/RangeSelector/RangeSelector.module.sass
+++ b/src/components/Catalog/Filters/RangeSelector/RangeSelector.module.sass
@@ -8,6 +8,7 @@
   justify-content: space-between
   padding-inline: 8px
   height: 56px
+  color: vars.$textcolor
 
   &__title
     grid-area: title
