feat: post comments

--- a/src/components/Layout/MobileMenu/MobileMenu.module.sass
+++ b/src/components/Layout/MobileMenu/MobileMenu.module.sass
@@ -1,7 +1,7 @@
 @use "/src/styles/vars"
 
 @mixin itemLink
-  font-family: iconfont, sans-serif
+  font-family: var(--iconfont)
   font-size: 20px
   line-height: 20px
   color: vars.$secondaryColor
