--- a/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
@@ -29,7 +29,7 @@
     height: 20px
     background: none
     color: rgba(255, 255, 255, .80)
-    font-family: iconfont, sans-serif
+    font-family: var(--iconfont)
     transition: .3s
 
     &:before
