--- a/src/components/Movie/MovieInfo/MovieInfoComponents/MovieButtons/MovieButtons.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoComponents/MovieButtons/MovieButtons.module.sass
@@ -47,6 +47,9 @@
   .buttons
     margin: 0
 
+    &__content
+      justify-content: space-between
+
     .button
       margin-right: 0
       margin-bottom: 12px
