--- a/src/components/Movie/MovieInfo/MovieInfoComponents/MovieMedallions/MovieMedallions.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoComponents/MovieMedallions/MovieMedallions.module.sass
@@ -40,12 +40,13 @@
   &__grade
     height: 44px
     width: 44px
-    background-color: #73a32f
     display: flex
     align-items: center
     justify-content: center
     border-radius: 8px
     color: vars.$whiteTextColor
+    &_fine
+      background-color: #73a32f
 
   &__avatar
     width: 44px
