--- a/src/components/Movie/MovieInfo/MovieInfoComponents/MovieRating/MovieRating.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoComponents/MovieRating/MovieRating.module.sass
@@ -19,9 +19,11 @@
     align-items: center
     justify-content: center
     color: vars.$whiteTextColor
-    background-color: #73a32f
+    background-color: #7e798f
     font-size: 24px
     font-weight: 700
+    &_fine
+      background-color: #73a32f
 
   &__column
     margin-left: 16px
