--- a/src/components/ModalWindows/SearchModal/SearchCloseButton/SearchCloseButton.module.sass
+++ b/src/components/ModalWindows/SearchModal/SearchCloseButton/SearchCloseButton.module.sass
@@ -2,36 +2,36 @@
 
 @keyframes close-button__skew-animation
   11.1%
-    -webkit-transform: none
-    transform: none
+  -webkit-transform: none
+  transform: none
 
   22.2%
-    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg)
-    transform: skewX(-12.5deg) skewY(-12.5deg)
+  -webkit-transform: skewX(-12.5deg) skewY(-12.5deg)
+  transform: skewX(-12.5deg) skewY(-12.5deg)
 
   33.3%
-    -webkit-transform: skewX(6.25deg) skewY(6.25deg)
-    transform: skewX(6.25deg) skewY(6.25deg)
+  -webkit-transform: skewX(6.25deg) skewY(6.25deg)
+  transform: skewX(6.25deg) skewY(6.25deg)
 
   44.4%
-    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg)
-    transform: skewX(-3.125deg) skewY(-3.125deg)
+  -webkit-transform: skewX(-3.125deg) skewY(-3.125deg)
+  transform: skewX(-3.125deg) skewY(-3.125deg)
 
   55.5%
-    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg)
-    transform: skewX(1.5625deg) skewY(1.5625deg)
+  -webkit-transform: skewX(1.5625deg) skewY(1.5625deg)
+  transform: skewX(1.5625deg) skewY(1.5625deg)
 
   66.6%
-    -webkit-transform: skewX(-.78125deg) skewY(-.78125deg)
-    transform: skewX(-.78125deg) skewY(-.78125deg)
+  -webkit-transform: skewX(-.78125deg) skewY(-.78125deg)
+  transform: skewX(-.78125deg) skewY(-.78125deg)
 
   77.7%
-    -webkit-transform: skewX(.390625deg) skewY(.390625deg)
-    transform: skewX(.390625deg) skewY(.390625deg)
+  -webkit-transform: skewX(.390625deg) skewY(.390625deg)
+  transform: skewX(.390625deg) skewY(.390625deg)
 
   88.8%
-    -webkit-transform: skewX(-.1953125deg) skewY(-.1953125deg)
-    transform: skewX(-.1953125deg) skewY(-.1953125deg)
+  -webkit-transform: skewX(-.1953125deg) skewY(-.1953125deg)
+  transform: skewX(-.1953125deg) skewY(-.1953125deg)
 
 .close
   display: flex
@@ -46,7 +46,7 @@
   font-size: 0
 
   &::before
-    font-family: ivi-icons
+    font-family: var(--ivi-icons)
     font-size: 20px
     line-height: 20px
     content: '\E052'
