feat: adjust jest config

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -83,8 +83,9 @@ a
         border-width: 7px 7px 0
 
 \:root
-  --toastify-color-dark: #1f1b2e
-  --toastify-color-progress-dark: #ea003d
+  --toastify-color-dark: #1f1b2e !important
+  --toastify-color-progress-dark: #ea003d !important
+  
 @media (max-width: 880px)
   .container
     padding: 0 24px
