feat: add google, vk buttons

--- a/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
@@ -1,5 +1,18 @@
 .container
   width: 290px
+  .socials
+    margin-top: 20px
+    &__link
+      width: 100%
+    &__btn
+      width: 100%
+      margin-top: 10px
+      font-size: 24px
+      .icon__container
+        display: flex
+        padding-left: 20px
+        width: 100%
+
 
 @media (max-width: 600px)
   .container
