--- a/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
@@ -7,11 +7,15 @@
     &__btn
       width: 100%
       margin-top: 10px
-      font-size: 24px
+      font-size: 20px
       .icon__container
         display: flex
+        align-items: center
+        gap: 20px
         padding-left: 20px
         width: 100%
+        .text
+          font-size: 14px
 
 
 @media (max-width: 600px)
