--- a/src/UI/MovieSlider/MovieSlider.module.sass
+++ b/src/UI/MovieSlider/MovieSlider.module.sass
@@ -10,7 +10,7 @@
 .icon::after
     content: "\E046"
     display: inline-block
-    font-family: iconfont
+    font-family: var(--iconfont)
     font-weight: 400
     font-style: normal
     font-size: 16px
