--- a/src/components/Home/PromoButtons/PromoButtons.module.sass
+++ b/src/components/Home/PromoButtons/PromoButtons.module.sass
@@ -37,11 +37,11 @@
             margin-right: 8px
 
 .arrow_right
-    font-family: ivi-icons
+    font-family: var(--ivi-icons)
     font-style: normal
     &::after
         content: '\E00B'
-        font-family: ivi-icons
+        font-family: var(--ivi-icons)
         font-style: normal
 
 @media (max-width: 880px)
