--- a/src/components/Movie/CommentsSlider/CommentCard/CommentCard.module.sass
+++ b/src/components/Movie/CommentsSlider/CommentCard/CommentCard.module.sass
@@ -63,7 +63,7 @@
 
 .icon
   &::after
-    font-family: iconfont
+    font-family: var(--iconfont)
     font-weight: 400
     font-style: normal
     color: rgba(126,121,143,.72)
