--- a/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
@@ -22,7 +22,7 @@
     display: flex
     align-items: center
     &::after
-      font-family: iconfont
+      font-family: var(--iconfont)
       font-weight: 400
       font-style: normal
       font-size: 16px
