--- a/src/UI/Creator/Creator.module.sass
+++ b/src/UI/Creator/Creator.module.sass
@@ -8,12 +8,12 @@
   width: 88px
 
   &_modal
-    width: 128px
+    width: 152px
     padding: 0 12px
 
     .wrapper
-      width: 100%
-      height: 100%
+      width: 128px
+      height: 128px
       aspect-ratio: 1/1
 
     .title
@@ -53,6 +53,9 @@
   line-height: 16px
   font-weight: 400
   width: 100%
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
 
   &:hover
     .title, .second__title
