--- a/src/components/Movie/CommentsSlider/CommentsSlider.module.sass
+++ b/src/components/Movie/CommentsSlider/CommentsSlider.module.sass
@@ -35,6 +35,7 @@
   box-shadow: 0 1px 0 rgb(255 255 255 / 16%), inset 0 0 0 rgb(255 255 255 / 16%)
   cursor: pointer
   transition: .3s
+  margin-bottom: 24px
 
   &:hover
     box-shadow: 0 1px 0 vars.$whiteTextColor, inset 0 0 0 vars.$whiteTextColor
@@ -54,8 +55,7 @@
     font-weight: 400
 
 .swiper
-  padding-top: 24px
-  padding-bottom: 24px
+  margin-bottom: 24px
 
 @media (max-width: 600px)
   .button
