--- a/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
@@ -12,6 +12,9 @@
     width: 34%
     padding-left: 40px
 
+  &__title
+    margin-bottom: 20px
+
 .button
   width: 100%
   margin-bottom: 16px
@@ -48,3 +51,6 @@
     &__buttons
       width: 100%
       padding: 0
+
+    &__title
+      text-align: center
