feat: ssr top ten query

--- a/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
+++ b/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
@@ -37,6 +37,7 @@
         border-radius: 8px
         aspect-ratio: 304/620
         max-width: 304px
+        object-fit: cover
 
     &__logo
         position: absolute
