feat: add user role

--- a/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/EmailInput/EmailInput.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/mixins"
+
 .container
   width: 290px
   .socials
@@ -15,7 +17,7 @@
         padding-left: 20px
         width: 100%
         .text
-          font-size: 14px
+          font-size: 12px
 
 
 @media (max-width: 600px)
