--- a/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
@@ -46,6 +46,9 @@
       transition: .3s
 
 @media (max-width: 400px)
-  .header__content
-    padding-inline: 10px
-    justify-content: space-between
+  .header
+    &__content
+      padding-inline: 10px
+      justify-content: space-between
+    &__button
+      position: unset
