feat: add some tests

--- a/src/components/Layout/Header/ActionLayout/Actions/Actions.module.sass
+++ b/src/components/Layout/Header/ActionLayout/Actions/Actions.module.sass
@@ -57,3 +57,6 @@
 @media (max-width: 600px)
   .subscription__button, .purple__button
     display: none
+@media (max-width: 390px)
+  .container
+    gap: 5px
