--- a/src/components/Layout/Header/Header.module.sass
+++ b/src/components/Layout/Header/Header.module.sass
@@ -41,3 +41,8 @@
       &-active
         opacity: 0
         @include dropDownActive
+@media (max-width: 390px)
+  .header__content
+    justify-content: unset
+    padding: 0
+    margin-left: -20px
