--- a/src/components/Layout/Header/NavigationLayout/NavigationLayout.module.sass
+++ b/src/components/Layout/Header/NavigationLayout/NavigationLayout.module.sass
@@ -11,3 +11,9 @@
 
   .content
     @include headerLayout
+@media (max-width: 390px)
+  .container
+    .logo
+      width: 80%
+      img
+        width: 100%
