--- a/src/components/ModalWindows/AuthModal/AuthModal.module.sass
+++ b/src/components/ModalWindows/AuthModal/AuthModal.module.sass
@@ -3,7 +3,7 @@
 .chat
   &__container
     background-color: vars.$modalBackground
-    overflow-x: hidden
     @include vars.modalPosition
     @include vars.modalInitAnimation
+    overflow: hidden
 
