fix: moviesList test

--- a/src/components/Catalog/MoviesList/MoviesList.module.sass
+++ b/src/components/Catalog/MoviesList/MoviesList.module.sass
@@ -11,6 +11,12 @@
     pointer-events: none
     opacity: .2
 
+  &__page
+    display: flex
+    width: 100%
+    justify-content: center
+    height: 20px
+
   &__loader
     display: flex
     justify-content: center
