feat: add admin movie poster

--- a/src/components/Admin/AdminGenres/AdminGenre/AdminGenre.module.sass
+++ b/src/components/Admin/AdminGenres/AdminGenre/AdminGenre.module.sass
@@ -22,8 +22,9 @@
   gap: 10px
 
   & > :nth-child(1)
-    width: 70%
+    width: 80%
 
   & > :nth-child(2)
-    width: 30%
+    min-width: 20%
+    width: auto
     margin: 0
