--- a/src/components/Catalog/Filters/Filters.module.sass
+++ b/src/components/Catalog/Filters/Filters.module.sass
@@ -23,6 +23,12 @@
     align-items: center
     gap: 10px
 
+  &__buttons
+    display: flex
+    gap: 10px
+    width: 100%
+    justify-content: space-between
+
 @media screen and (max-width: 960px)
   .filters
     &__top
