feat: remove background color after tap to toggleSwitch

--- a/src/UI/ToggleSwitch/ToggleSwitch.module.sass
+++ b/src/UI/ToggleSwitch/ToggleSwitch.module.sass
@@ -4,6 +4,7 @@
   display: flex
   align-items: center
   justify-content: space-between
+  -webkit-tap-highlight-color: transparent
   cursor: pointer
   width: 90px
   height: 45px
