fix: filters reset buttons adaptive

--- a/src/components/Catalog/Filters/Filters.module.sass
+++ b/src/components/Catalog/Filters/Filters.module.sass
@@ -25,7 +25,7 @@
 
   &__buttons
     display: flex
-    gap: 10px
+    gap: 20px
     width: 100%
     justify-content: space-between
 
@@ -47,3 +47,6 @@
 
       & > div:nth-of-type(3)
         grid-column: auto
+
+    &__buttons
+      display: grid
