feat: add some stories

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -79,3 +79,13 @@
     &:hover
       background: none
       border: 1px solid vars.$whiteTextColor
+  &_admin
+    background-color: vars.$accent
+    width: 20px
+    height: 140px
+    .btn__content
+      color: vars.$whiteTextColor
+      font-size: 14px
+      text-align: center
+      writing-mode: vertical-lr
+      -webkit-writing-mode: vertical-lr
