feat: change admin button styles

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -83,6 +83,8 @@
     background-color: vars.$accent
     width: 20px
     height: 140px
+    border-radius: 0 8px 8px 0
+    padding: 9px 10px
     .btn__content
       color: vars.$whiteTextColor
       font-size: 14px
